using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace FreeRP.Localization
{
    public class FrpLocalization
    {
        //A
        public string Action { get; set; } = string.Empty;
        public string AccessDenied { get; set; } = string.Empty;
        public string Access { get; set; } = string.Empty;
        public string AccessRights { get; set; } = string.Empty;
        public string AccessMode { get; set; } = string.Empty;
        public string Add { get; set; } = string.Empty;
        public string ApiUser { get; set; } = string.Empty;
        public string ApiUserAdd { get; set; } = string.Empty;
        public string ApiUserChange { get; set; } = string.Empty;
        public string ApiUserChangeKey { get; set; } = string.Empty;
        public string ApiUserDelete { get; set; } = string.Empty;
        public string AddRole { get; set; } = string.Empty;
        public string AddProject { get; set; } = string.Empty;
        public string AddFilter { get; set; } = string.Empty;
        public string AddDatabase { get; set; } = string.Empty;
        public string AddDataStructure { get; set; } = string.Empty;
        public string AddDataField { get; set; } = string.Empty;
        public string All { get; set; } = string.Empty;
        public string ApiKey { get; set; } = string.Empty;
        public string Apply { get; set; } = string.Empty;
        public string Authors { get; set; } = string.Empty;
        public string AsTable { get; set; } = string.Empty;
        public string AsGrid { get; set; } = string.Empty;
        public string AllowUnknownData { get; set; } = string.Empty;
        public string AllowUnknownFields { get; set; } = string.Empty;
        //B
        //C
        public string Cancel { get; set; } = string.Empty;
        public string ChangePassword { get; set; } = string.Empty;
        public string ChangeRole { get; set; } = string.Empty;
        public string ChangeProject { get; set; } = string.Empty;
        public string ChangeDatabase { get; set; } = string.Empty;
        public string ChangeDataStructure { get; set; } = string.Empty;
        public string ChangeDataField { get; set; } = string.Empty;
        public string Colours { get; set; } = string.Empty;
        public string ConnectToServer { get; set; } = string.Empty;
        public string ConnectToServerError { get; set; } = string.Empty;
        public string Create { get; set; } = string.Empty;
        public string Created { get; set; } = string.Empty;
        public string Change { get; set; } = string.Empty;
        public string Changed { get; set; } = string.Empty;
        public string CopyApiKey { get; set; } = string.Empty;
        public string ComparisonType { get; set; } = string.Empty;
        public string Contains { get; set; } = string.Empty;
        public string Custom { get; set; } = string.Empty;
        public string CloseDatabase { get; set; } = string.Empty;
        public string Copy { get; set; } = string.Empty;
        public string Cut { get; set; } = string.Empty;
        public string Close { get; set; } = string.Empty;
        public string Critical { get; set; } = string.Empty;
        public string Content { get; set; } = string.Empty;

        //D
        public string Date { get; set; } = string.Empty;
        public string DataAccess { get; set; } = string.Empty;
        public string DeleteRole { get; set; } = string.Empty;
        public string DeleteProject { get; set; } = string.Empty;
        public string DeleteDatabase { get; set; } = string.Empty;
        public string DeleteDataStructure { get; set; } = string.Empty;
        public string DeleteTableField { get; set; } = string.Empty;
        public string Delete { get; set; } = string.Empty;
        public string Description { get; set; } = string.Empty;
        public string Detail { get; set; } = string.Empty;
        public string DataOwner { get; set; } = string.Empty;
        public string Download { get; set; } = string.Empty;
        public string DownloadFileError { get; set; } = string.Empty;
        public string DownloadAsFile { get; set; } = string.Empty;
        public string Database { get; set; } = string.Empty;
        public string DatabaseProvider { get; set; } = string.Empty;
        public string DatabaseUnit { get; set; } = string.Empty;
        public string DatabaseId { get; set; } = string.Empty;
        public string DataStructure { get; set; } = string.Empty;
        public string Dataset { get; set; } = string.Empty;
        public string DatasetLogging { get; set; } = string.Empty;
        public string DataField { get; set; } = string.Empty;
        public string DatabaseTableId { get; set; } = string.Empty;
        public string DatabaseFieldId { get; set; } = string.Empty;
        public string DatabaseRights { get; set; } = string.Empty;
        public string DataType { get; set; } = string.Empty;
        public string DataTypeNull { get; set; } = string.Empty;
        public string DataTypeString { get; set; } = string.Empty;
        public string DataTypeNumber { get; set; } = string.Empty;
        public string DataTypeArray { get; set; } = string.Empty;
        public string DataTypeBoolen { get; set; } = string.Empty;
        public string DataTypeObject { get; set; } = string.Empty;
        public string Directories { get; set; } = string.Empty;
        public string Directory { get; set; } = string.Empty;
        public string DirectoryCreate { get; set; } = string.Empty;
        public string DirectoryChange { get; set; } = string.Empty;
        public string DirectoryDelete { get; set; } = string.Empty;
        public string Duplicate { get; set; } = string.Empty;
        public string Debug { get; set; } = string.Empty;
        public string DefaultSystemUser { get; set; } = string.Empty;
        public string DefaultAdminUser { get; set; } = string.Empty;

        //Error
        public string ErrorUnknown { get; set; } = string.Empty;
        public string ErrorAccessDenied { get; set; } = string.Empty;
        public string ErrorEmailInvalid { get; set; } = string.Empty;
        public string ErrorPathExist { get; set; } = string.Empty;
        public string ErrorPathNotExist { get; set; } = string.Empty;
        public string ErrorNotFound { get; set; } = string.Empty;
        public string ErrorNoConnectToServer { get; set; } = string.Empty;

        public string ErrorPasswordToShort { get; set; } = string.Empty;
        public string ErrorPasswordNumber { get; set; } = string.Empty;
        public string ErrorPasswordUpperChar { get; set; } = string.Empty;
        public string ErrorPasswordLowerChar { get; set; } = string.Empty;
        public string ErrorPasswordSymbols { get; set; } = string.Empty;
        public string ErrorPasswordlessMail { get; set; } = string.Empty;

        public string ErrorUserExist { get; set; } = string.Empty;
        public string ErrorUserNotExist { get; set; } = string.Empty;

        public string ErrorRoleExist { get; set; } = string.Empty;
        public string ErrorRoleNotExist { get; set; } = string.Empty;
        public string ErrorRoleNameRequired { get; set; } = string.Empty;

        public string ErrorProjectExist { get; set; } = string.Empty;
        public string ErrorProjectNotExist { get; set; } = string.Empty;
        public string ErrorProjectRoleExist { get; set; } = string.Empty;
        public string ErrorProjectNotRoleExist { get; set; } = string.Empty;
        public string ErrorProjectNameRequired { get; set; } = string.Empty;

        public string ErrorDatabaseOnlyUserAccess { get; set; } = string.Empty;
        public string ErrorDatabaseOnlyRoleAccess { get; set; } = string.Empty;
        public string ErrorDatabaseOnlyProjectAccess { get; set; } = string.Empty;
        public string ErrorDatabaseExist { get; set; } = string.Empty;
        public string ErrorDatabaseNotExist { get; set; } = string.Empty;
        public string ErrorDatabaseIdRequired { get; set; } = string.Empty;
        public string ErrorDatabaseIsNotOpen { get; set; } = string.Empty;
        public string ErrorDatabaseNotAllowedUnkownData { get; set; } = string.Empty;

        public string ErrorDataStructureExist { get; set; } = string.Empty;
        public string ErrorDataStructureNotExist { get; set; } = string.Empty;
        public string ErrorDataStructureIdRequired { get; set; } = string.Empty;
        public string ErrorDataStructurePrimaryKeyRequired { get; set; } = string.Empty;
        public string ErrorDataSetInvalid { get; set; } = string.Empty;

        public string ErrorDataFieldExist { get; set; } = string.Empty;
        public string ErrorDataFieldNotExist { get; set; } = string.Empty;
        public string ErrorDataFieldIdRequired { get; set; } = string.Empty;

        public string ErrorUriSchemeNotSupported { get; set; } = string.Empty;
        public string ErrorUriSchemeFileRequired { get; set; } = string.Empty;
        public string ErrorUriSchemeDatabaseRequired { get; set; } = string.Empty;

        public string ErrorFileExist { get; set; } = string.Empty;
        public string ErrorFileNotExist { get; set; } = string.Empty;
        public string ErrorDirectoryExist { get; set; } = string.Empty;
        public string ErrorDirectoryNotExist { get; set; } = string.Empty;

        public string ErrorAccessConflict { get; set; } = string.Empty;
        public string ErrorAccessExist { get; set; } = string.Empty;
        public string ErrorAccessNotExist { get; set; } = string.Empty;
        

        //E
        public string Email { get; set; } = string.Empty;
        public string Error { get; set; } = string.Empty;
        public string EnterServerAddress { get; set; } = string.Empty;
        public string Edit { get; set; } = string.Empty;
        public string EqualsText { get; set; } = string.Empty;
        public string EndsWith { get; set; } = string.Empty;
        public string ExpirationDate { get; set; } = string.Empty;
        public string EventLogs { get; set; } = string.Empty;

        //F
        public string FirstName { get; set; } = string.Empty;
        public string Function { get; set; } = string.Empty;
        public string Filter { get; set; } = string.Empty;
        public string From { get; set; } = string.Empty;

        public string Files { get; set; } = string.Empty;
        public string File { get; set; } = string.Empty;
        public string FileAdd { get; set; } = string.Empty;
        public string FileChange { get; set; } = string.Empty;
        public string FileDelete { get; set; } = string.Empty;
        public string FileSize { get; set; } = string.Empty;
        public string FileUpload { get; set; } = string.Empty;

        //G
        public string GrpcMessageSizeInByte { get; set; } = string.Empty;
        public string GrpcTransportTimeoutInMinutes { get; set; } = string.Empty;

        //H
        public string Hide { get; set; } = string.Empty;
        //I
        public string Info { get; set; } = string.Empty;
        public string IsLocked { get; set; } = string.Empty;
        public string IsDeveloper { get; set; } = string.Empty;
        public string IsApi { get; set; } = string.Empty;
        public string IsEmpty { get; set; } = string.Empty;
        public string IsNotEmpty { get; set; } = string.Empty;
        public string IsId { get; set; } = string.Empty;
        public string Id { get; set; } = string.Empty;
        public string Individually { get; set; } = string.Empty;
        public string Information { get; set; } = string.Empty;
        //J
        //K
        //L
        public string Loading { get; set; } = string.Empty;
        public string Lastname { get; set; } = string.Empty;
        public string Login { get; set; } = string.Empty;
        public string Logout { get; set; } = string.Empty;
        public string LoginAsUser { get; set; } = string.Empty;
        public string LoginAsAdmin { get; set; } = string.Empty;
        public string LoginAsDeveloper { get; set; } = string.Empty;
        public string LoginError { get; set; } = string.Empty;
        public string LoadMore { get; set; } = string.Empty;
        public string Logs { get; set; } = string.Empty;
        public string Language { get; set; } = string.Empty;
        public string LogLevel { get; set; } = string.Empty;
        public string Location { get; set; } = string.Empty;

        //M
        public string Menu { get; set; } = string.Empty;
        public string MaxRecordsPerQuery { get; set; } = string.Empty;
        public string Message { get; set; } = string.Empty;
        public string MinPasswordLength { get; set; } = string.Empty;

        //N
        public string Name { get; set; } = string.Empty;
        public string No { get; set; } = string.Empty;
        public string Note { get; set; } = string.Empty;
        public string None { get; set; } = string.Empty;
        public string NotContains { get; set; } = string.Empty;
        public string NotEquals { get; set; } = string.Empty;
        //O
        public string OrderBy { get; set; } = string.Empty;
        public string Ok { get; set; } = string.Empty;
        public string OpenDatabase { get; set; } = string.Empty;

        //P
        public string Paste { get; set; } = string.Empty;
        public string Password { get; set; } = string.Empty;
        public string PasswordSigningKey { get; set; } = string.Empty;
        public string PasswordValidateError { get; set; } = string.Empty;
        public string PasswordNotMatch { get; set; } = string.Empty;
        public string Passwordless { get; set; } = string.Empty;
        public string Phone { get; set; } = string.Empty;
        public string Profile { get; set; } = string.Empty;
        public string Plugin { get; set; } = string.Empty;
        public string PluginInstall { get; set; } = string.Empty;
        public string PluginId { get; set; } = string.Empty;
        public string PluginStore { get; set; } = string.Empty;
        public string PropertyName { get; set; } = string.Empty;
        public string PickDatabase { get; set; } = string.Empty;
        public string PickTable { get; set; } = string.Empty;
        public string PleaseSelect { get; set; } = string.Empty;
        public string Project { get; set; } = string.Empty;
        public string ProjectRole { get; set; } = string.Empty;
        public string ProjectManager { get; set; } = string.Empty;
        public string ProjectMember { get; set; } = string.Empty;
        public string PrimaryKey { get; set; } = string.Empty;
        public string Permissions { get; set; } = string.Empty;

        //Q
        public string Query { get; set; } = string.Empty;

        //R
        public string RepeatPassword { get; set; } = string.Empty;
        public string ReallyDelete { get; set; } = string.Empty;
        public string Read { get; set; } = string.Empty;
        public string ReloadData { get; set; } = string.Empty;
        public string Role { get; set; } = string.Empty;
        public string RightToLeftMode { get; set; } = string.Empty;
        public string Reset { get; set; } = string.Empty;
        public string ReallyReset { get; set; } = string.Empty;
        public string Replace { get; set; } = string.Empty;

        //S
        public string Save { get; set; } = string.Empty;
        public string Settings { get; set; } = string.Empty;
        public string Search { get; set; } = string.Empty;
        public string SortDescending { get; set; } = string.Empty;
        public string SortAscending { get; set; } = string.Empty;
        public string StartsWith { get; set; } = string.Empty;
        public string ServerName { get; set; } = string.Empty;
        public string ServerUrl { get; set; } = string.Empty;
        public string Style { get; set; } = string.Empty;
        public string StyleLight { get; set; } = string.Empty;
        public string StyleDark { get; set; } = string.Empty;
        public string StaticPaths { get; set; } = string.Empty;
        public string Show { get; set; } = string.Empty;
        public string Send { get; set; } = string.Empty;
        public string SuccessfullySent { get; set; } = string.Empty;

        //T
        public string TokenDateOfExpiry { get; set; } = string.Empty;
        public string TokenSigningKey { get; set; } = string.Empty;
        public string TokenValidityInHours { get; set; } = string.Empty;
        public string Table { get; set; } = string.Empty;
        public string To { get; set; } = string.Empty;
        public string Time { get; set; } = string.Empty;
        public string Theme { get; set; } = string.Empty;
        public string ThemeDark { get; set; } = string.Empty;
        public string ThemeLight { get; set; } = string.Empty;
        public string Trash { get; set; } = string.Empty;
        public string Temporary { get; set; } = string.Empty;
        public string TestEmail { get; set; } = string.Empty;

        //U

        public string Undefined { get; set; } = string.Empty;
        public string UserManagement { get; set; } = string.Empty;
        public string User { get; set; } = string.Empty;
        public string UserName { get; set; } = string.Empty;
        public string UserAdd { get; set; } = string.Empty;
        public string UserChange { get; set; } = string.Empty;
        public string UserDelete { get; set; } = string.Empty;
        public string UserChangePassword { get; set; } = string.Empty;
        public string UserInRole { get; set; } = string.Empty;
        public string UriSchemeNotSupported { get; set; } = string.Empty;
        public string Url { get; set; } = string.Empty;
        public string Uri { get; set; } = string.Empty;

        /// <summary>
        /// Replace {0}. Example in English: The URI scheme {0} is missing
        /// </summary>
        public string UriSchemeMissing { get; set; } = string.Empty;
        public string Upload { get; set; } = string.Empty;

        /// <summary>
        /// Replace {0}. Example in English: Allowed file types: {0}
        /// </summary>
        public string UploadAccept { get; set; } = string.Empty;
        public string UploadFile { get; set; } = string.Empty;
        /// <summary>
        /// Replace {0}. Example in English: Maximum of {0} files allowed
        /// </summary>
        public string UploadMaximumFileCount { get; set; } = string.Empty;
        /// <summary>
        /// Replace {0}. Example in English: The maximum allowed file size is {0}
        /// </summary>
        public string UploadMaximumFileSize { get; set; } = string.Empty;
        //V
        public string Version { get; set; } = string.Empty;
        public string Value { get; set; } = string.Empty;
        //W
        public string What { get; set; } = string.Empty;
        public string Who { get; set; } = string.Empty;
        public string When { get; set; } = string.Empty;
        public string Where { get; set; } = string.Empty;
        public string Warning { get; set; } = string.Empty;

        //X

        /// <summary>
        /// Replace {0}. Example in English: {0} is required
        /// </summary>
        public string XIsRequired { get; set; } = string.Empty;

        /// <summary>
        /// Replace {0}. Example in English: Split or merge {0}
        /// </summary>
        public string XSplitOrMerge { get; set; } = string.Empty;

        /// <summary>
        /// Replace {0}. Example in English: {0} already exists
        /// </summary>
        public string XExist { get; set; } = string.Empty;

        /// <summary>
        /// Replace {0}. Example in English: {0} not exists
        /// </summary>
        public string XNotExist { get; set; } = string.Empty;

        //Y
        public string Yes { get; set; } = string.Empty;
        //Z
    }
}
